--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,6 +1,10 @@
 .element {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
   background-color: #fff;
   border-radius: 10px;
   z-index: 1;
