--- a/blocks/form/__field/form__field.css
+++ b/blocks/form/__field/form__field.css
@@ -1,20 +1,20 @@
-.form__field-1 {
+.form__field {
   margin: 45px 0 0;
   box-sizing: border-box;
   border: none;
-  border-bottom: 1px solid #f1f1f1;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 10px;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
 }
 
-.form__field-1:last-of-type {
+.form__field:last-of-type {
   margin: 30px 0 0;
 }
 
 @media screen and (max-width: 570px) {
-  .form__field-1 {
+  .form__field {
     margin: 75px 0 0;
   }
 }
