--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -14,6 +14,7 @@
   margin: 48px 0 0;
   border-radius: 2px;
   transition: opacity .2s linear;
+  cursor: pointer;
 }
 
 .form__submit-button:hover {
