--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,4 @@
-.profile-info__add-button {
+.profile__add-button {
   width: 146px;
   height: 50px;
   background-color: #000;
@@ -14,19 +14,19 @@
   border-radius: 1px;
 }
 
-.profile-info__add-button:hover {
+.profile__add-button:hover {
   opacity: .6;
 }
 
 @media screen and (max-width: 708px) {
-  .profile-info__add-button {
+  .profile__add-button {
     width: 340px;
     margin: 36px 0 0;
   }
 }
 
 @media screen and (max-width: 380px) {
-  .profile-info__add-button {
+  .profile__add-button {
     width: 88%;
     background-size: 6%;
   }
