--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,4 +1,4 @@
-.profile-info__title {
+.profile__title {
   max-width: 293px;
   color: #fff;
   font-size: 42px;
@@ -11,13 +11,13 @@
 }
 
 @media screen and (max-width: 708px) {
-  .profile-info__title {
+  .profile__title {
     text-align: center;
   }
 }
 
 @media screen and (max-width: 380px) {
-  .profile-info__title {
+  .profile__title {
     font-size: 27px;
     line-height: 33px;
   }
