--- a/blocks/element/__group/element__group.css
+++ b/blocks/element/__group/element__group.css
@@ -2,10 +2,10 @@
   display: flex;
   max-width: 246px;
   width: 100%;
-  height: 79px;
+  height: auto;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 0;
+  margin: 25px 0 25px;
   padding: 0;
 }
