--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,4 +1,23 @@
 .element__image {
   width: 100%;
+  height: 282px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 881px) {
+  .element__image {
+    height: 350px;
+  }
+}
+
+@media screen and (max-width: 594px) {
+  .element__image {
+    height: 450px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .element__image {
+    height: 282px;
+  }
 }
