--- a/blocks/popup-pic/popup-pic.css
+++ b/blocks/popup-pic/popup-pic.css
@@ -1,12 +1,13 @@
-.popup {
+.popup-pic {
   position: fixed;
   display: flex;
   align-items: center;
+  justify-content: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0.9);
   z-index: 1;
   visibility: hidden;
   opacity: 0;
