--- a/blocks/popup-pic/__box/popup-pic__box.css
+++ b/blocks/popup-pic/__box/popup-pic__box.css
@@ -1,10 +1,7 @@
 .popup-pic__box {
-  display: flex;
-  align-items: start;
-  justify-content: center;
   position: relative;
   max-width: 816px;
-  width: 100%;
+  object-fit: contain;
   height: auto;
   margin: 0 auto;
   z-index: 3;
