--- a/blocks/popup/__close-img/popup__close-img.css
+++ b/blocks/popup/__close-img/popup__close-img.css
@@ -1,9 +1,9 @@
-.popup__close-icon_img {
+.popup__close-img {
   position: absolute;
   float: right;
   width: 32px;
   height: 32px;
-  background-image: url(../../../../../images/close-icon/Close-Icon.svg);
+  background-image: url(../../../images/close-icon/Close-Icon.svg);
   background-size: contain;
   background-repeat: no-repeat;
   border: none;
